[package]
name = "prepare-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs = "0.8.34"
log = "0.4.21"
reqwest = "0.12.4"
scraper = "0.19.0"
tokio = { version = "1.37.0", features = ["macros", "fs", "rt-multi-thread"] }
meteo = { git = "https://github.com/irevoire/meteo" }
