[package]
name = "prepare-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs = "0.8.35"
log = "0.4.27"
reqwest = "0.12.15"
scraper = "0.23.1"
tokio = { version = "1.44.1", features = ["macros", "fs", "rt-multi-thread"] }
meteo = { git = "https://github.com/irevoire/meteo" }
